tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_as_trait_path_syntax_resolves_outside_impl/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected type i64, found type i32
   ┌─ src/main.nr:15:22
   │
15 │         let _: i64 = 1 as <Bar as Foo<Assoc = i32>>::Assoc;
   │                      -------------------------------------
   │

Aborting due to 1 previous error
