tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_as_trait_path_syntax_resolves_outside_impl/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type i64, found type i32
   ┌─ src/main.nr:15:22
   │
15 │         let _: i64 = 1 as <Bar as Foo<Assoc = i32>>::Assoc;
   │                      -------------------------------------
   │

Aborting due to 1 previous error
